--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.1",
     "multer": "^2.0.1"
   }
 }
