--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb+srv://tsukyyy:ideserveit@cluster0.9ok3eqm.mongodb.net/tsukyyyDB?retryWrites=true&w=majority&appName=Cluster0
-CLOUD_NAME=root
+CLOUD_NAME=Root
 CLOUD_API_KEY=948665858554326
 CLOUD_API_SECRET=lYamx79fc9IYFonhXYGNPp88no4
